samples/_failures_safe/1761565296_94bb35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b62d9e2.c: In function ‘main’:
./samples/SAFE/__tmp_5b62d9e2.c:153:17: error: expected expression at end of input
  153 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_5b62d9e2.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b62d9e2.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b62d9e2.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b62d9e2.c:153:17: error: expected declaration or statement at end of input
